# project-chrono

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlintignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_LOG.md  PROJECT-CHRONO-BLUEPRINT.md  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-ticket.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
.husky/: README.md  pre-commit
apps/api/: .env.example  .gitignore  README.md  package.json  test-ingest.json  tsconfig.json
docs/: QUICK-START.md
docs/api/: README.md  authentication.md  websocket.md
docs/architecture/: DECISIONS.md  README.md  data-flow.md  networking.md  system-design.md
docs/business/: README.md  delegation-tracking-guide.md  ftso-metrics-guide.md  infrastructure-costs-guide.md  pnl-model-guide.md
docs/implementation/: CHRONO-002-guide.md  CHRONO-003-guide.md  CHRONO-010-guide.md  CHRONO-011-guide.md  IMPL-TEMPLATE.md  README.md
docs/performance/: LOAD-TESTING.md
docs/setup/: README.md  cloudflare-workers.md  mac-mini-setup.md  production-deployment.md  timescaledb-setup.md
docs/specs/: CHRONO-002-repo-structure.md  CHRONO-003-mac-mini-m4-pro-setup.md  CHRONO-004-core-data-models.md  CHRONO-007-api-layer.md  CHRONO-010-api-documentation.md  CHRONO-011-DEX-CONSIDERATIONS.md  CHRONO-011-workers.md  README.md  SPEC-TEMPLATE.md
docs/status/: CURRENT-STATUS.md
docs/tests/: CHRONO-002-tests.md  CHRONO-003-tests.md  README.md  TEST-TEMPLATE.md
docs/workflow/: README.md  (+6 more)
migrations/: 001_initial_schema.sql
(+75 files in other folders)
