[workspace]
resolver = "2"

members = [
    "src/oracle/rust",
    "src/blockchain/rust",
    "src/shared/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Project Chrono Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
